# nice_design

./: .gitignore  README.md  manifest.in  pyproject.toml  requirements.txt  run.sh  test.py  test_plugins.py
nd-solarized/: pyproject.toml
nd-solarized/nd_solarized/: themes.py
nice_design/: __init__.py
nice_design/assets/css/: atoms.css  global.css  quasar_overrides.css  textures.css
nice_design/components/: __init__.py  button.py  card.py  mixins.py
nice_design/components/atoms/: __init__.py  button.py  card.py  icon.py  menu.py  multi_button.py  palette_icon.py  select.py  select_button.py  shape_icon.py  slider.py  texture_icon.py  theme_icon.py
nice_design/components/atoms/theme_icons/: __init__.py  border_icon.py  palette_icon.py  shadow_highlight_icon.py  shape_icon.py  texture_icon.py  theme_icon.py
nice_design/components/molecules/: __init__.py  select_menu.py  theme_config.py  theme_selector.py
nice_design/components/organisms/: __init__.py  theme_selector.py
nice_design/core/: configure.py  definitions.py  engine.py  fonts.py  logic_styles.py  manager.py  presets.py  registry.py  styles.py  utils.py
nice_design/themes/: nice_flat.yaml  nice_material.yaml  nice_metro.yaml  nice_solarized.yaml  nice_tailwind.yaml  solarized.yaml
nice_design/themes/layouts/: rounded-standard.yaml
nice_design/themes/palettes/: flat_ui.yaml  material.yaml  metro.yaml  solarized.yaml  tailwind.yaml
nice_design/themes/textures/: frosted.css
test/: README.md  main.py  run.sh
